--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "6dfd5c32-4646-409d-845b-3bc04ac159f5"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
